add content (about Git)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="four columns">
 							<h3>Build</h3>
 							<p>I make the design work in a web browser. My inner geek loves to code and be a developer, so I speak HTML / CSS and Javascript (jQuery).</p>
-							<p>Sometimes I use Sass & Compass. I can build working prototypes quickly.</p>
+							<p>I use Sass & Compass and commit code to Git. I can build working prototypes quickly.</p>
 						</div>
 						<div class="four columns">
 							<h3>Test</h3>
