add KMM London to the portfolio

--- a/index.html
+++ b/index.html
@@ -80,6 +80,40 @@
 					<h2 class="section-title">I've done:</h2>
 					<article>
 						<div class="row">
+							<div class="five columns push-seven">
+								<h4>Design & build the online presence of KMM London.</h4>
+								<h5 class="subheader">Based on Katalin's love for hats they started a new business. I've been working with them from the beginning to build their (online) business.</h5>
+								<h5>My roles:</h5>
+								<ul>
+									<li><span>Discover business & user needs and possible solutions</span></li>
+									<li><span>Branding and visual design</span></li>
+									<li><span>Iterative prototyping & website building</span></li>
+									<li><a href="http://katalinmerksz.com">Open the website</a></li>
+								</ul>
+								<h6>Info for geeks:</h6>
+								<ul>
+									<li><span>Built with Sublime Text 2</span></li>
+									<li><span>Foundation & Sass / Compass</span></li>
+									<li><span>Git & Beanstalk</span></li>
+								</ul>
+							</div>
+							<div class="seven columns pull-five">
+								<div class="flex-container">
+									<div class="flexslider">
+										<ul class="slides" >
+											<li><img src="media/kmm-london-1.jpg"></li>
+											<li><img src="media/kmm-london-2.gif"></li>
+											<li><img src="media/kmm-london-3.gif"></li>
+											<li><img src="media/kmm-london-4.gif"></li>
+											<li><img src="media/kmm-london-5.jpg"></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</article>
+					<article>
+						<div class="row">
 							<div class="five columns">
 								<h4>Wireframing, prototyping and usability testing of Mobile Vodafone</h4>
 								<h5 class="subheader">I was part of the in-house team who were responsible of the design and development.</h5>
