--- a/index.html
+++ b/index.html
@@ -80,24 +80,8 @@
 					<h2 class="section-title">I've done:</h2>
 					<article>
 						<div class="row">
-							<div class="five columns push-seven">
+							<div class="columns twelve">
 								<h4>Design & build the online presence of KMM London.</h4>
-								<h5 class="subheader">Based on Katalin's love for hats they started a new business. I've been working with them from the beginning to build their (online) business.</h5>
-								<h5>My roles:</h5>
-								<ul>
-									<li><span>Discover business & user needs and possible solutions</span></li>
-									<li><span>Branding and visual design</span></li>
-									<li><span>Iterative prototyping & website building</span></li>
-									<li><a href="http://katalinmerksz.com">Open the website</a></li>
-								</ul>
-								<h6>Info for geeks:</h6>
-								<ul>
-									<li><span>Built with Sublime Text 2</span></li>
-									<li><span>Foundation & Sass / Compass</span></li>
-									<li><span>Git & Beanstalk</span></li>
-								</ul>
-							</div>
-							<div class="seven columns pull-five">
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -111,21 +95,35 @@
 								</div>
 							</div>
 						</div>
+						<div class="row">
+							<div class="twelve columns">
+								<h5 class="subheader">Based on Katalin's love for hats they started a new business. I've been working with them from the beginning to build their (online) business.</h5>
+								<div class="row">
+									<div class="columns six">
+										<h5>My roles:</h5>
+										<ul>
+											<li><span>Discover business & user needs and possible solutions</span></li>
+											<li><span>Branding and visual design</span></li>
+											<li><span>Iterative prototyping & website building</span></li>
+											<li><a href="http://katalinmerksz.com">Open the website</a></li>
+										</ul>
+									</div>
+									<div class="columns six">
+										<h6>Info for geeks:</h6>
+										<ul>
+											<li><span>Built with Sublime Text 2</span></li>
+											<li><span>Foundation & Sass / Compass</span></li>
+											<li><span>Git & Beanstalk</span></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
 					</article>
 					<article>
 						<div class="row">
-							<div class="five columns">
+							<div class="twelve columns">
 								<h4>Wireframing, prototyping and usability testing of Mobile Vodafone</h4>
-								<h5 class="subheader">I was part of the in-house team who were responsible of the design and development.</h5>
-								<h5>My roles:</h5>
-								<ul>
-									<li><span>Took part in brainstorming, wireframing workshops with internal stakeholders and agency designers.</span></li>
-									<li><span>Used TAP and Adobe Fireworks to make the prototype and refine wireframes.</span></li>
-									<li><span>Created user tasks for the test based on research reports from Vodafone Group.</span></li>
-									<li><span>Moderated the user tests and refined the prototype based on finding of the test.</span></li>
-								</ul>					
-							</div>
-							<div class="seven columns">
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -137,11 +135,24 @@
 								</div>
 							</div>
 						</div>
+						<div class="row">
+							<div class="twelve columns">
+								<h5 class="subheader">I was part of the in-house team who were responsible of the design and development.</h5>
+								<h5>My roles:</h5>
+								<ul>
+									<li><span>Took part in brainstorming, wireframing workshops with internal stakeholders and agency designers.</span></li>
+									<li><span>Used TAP and Adobe Fireworks to make the prototype and refine wireframes.</span></li>
+									<li><span>Created user tasks for the test based on research reports from Vodafone Group.</span></li>
+									<li><span>Moderated the user tests and refined the prototype based on finding of the test.</span></li>
+								</ul>					
+							</div>
+						</div>
 					</article>
 					<article>
 						<div class="row">
-							<div class="five columns push-seven">
+							<div class="twelve columns">
 								<h4>Usability testing of vodafone.hu</h4>
+								<img class="bordered-img" src="media/vf-user-test.jpg">
 								<h5 class="subheader">I have created user task for the test based on stakeholder interviews and moderated the test using Silverback App.</h5>
 								<h5>Objectives were:</h5>
 								<ul>
@@ -150,27 +161,12 @@
 									<li><span>Increase selfcare transactions to reduce call center load.</span></li>
 								</ul>					
 							</div>
-							<div class="seven columns pull-five">
-								<ul class="list-without-bullets">
-									<li><img class="bordered-img" src="media/vf-user-test.jpg"></li>
-								</ul>
-							</div>
 						</div>
 					</article>
 					<article>
 						<div class="row">
-							<div class="five columns">
+							<div class="twelve columns">
 								<h4>Vodafone Online tour</h4>
-								<h5 class="subheader">A tour to communicate to our users what kind of selfcare solution we provide. Drive My Vodafone usage, increase the number of registered users.</h5>
-								<h5>My roles:</h5>
-								<ul>
-									<li><span>Sketching, wireframing of the initial idea.</span></li>
-									<li><span>Iterative design with in-house and agency ux designers.</span></li>
-									<li><span>Coordinating the implementation.</span></li>
-									<li class="hide-for-small"><a href="http://vodafone.hu/online-ugyintezes/osszes-szolgaltatas">Open the website</a></li>
-								</ul>					
-							</div>
-							<div class="seven columns">
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -180,22 +176,21 @@
 										</ul>
 									</div>
 								</div>
+								<h5 class="subheader">A tour to communicate to our users what kind of selfcare solution we provide. Drive My Vodafone usage, increase the number of registered users.</h5>
+								<h5>My roles:</h5>
+								<ul>
+									<li><span>Sketching, wireframing of the initial idea.</span></li>
+									<li><span>Iterative design with in-house and agency ux designers.</span></li>
+									<li><span>Coordinating the implementation.</span></li>
+									<li class="hide-for-small"><a href="http://vodafone.hu/online-ugyintezes/osszes-szolgaltatas">Open the website</a></li>
+								</ul>					
 							</div>
 						</div>
 					</article>
 					<article>
 						<div class="row">
-							<div class="five columns push-seven">
+							<div class="twelve columns">
 								<h4>e-Bill payment and top-up kiosk.</h4>
-								<h5 class="subheader">Prototyping and designing an e-bill payment and top-up solution for Vodafone SmartStore to get executive buy-in.</h5>
-								<h5>My roles:</h5>
-								<ul>
-									<li><span>Redesign previously available capabilities for tablet based kiosk.</span></li>
-									<li><span>Create a tapable prototype to convince the director of consumer business unit.</span></li>
-									<li><span>Finalize the design and create documentation for developers.</span></li>
-								</ul>					
-							</div>
-							<div class="seven columns pull-five">
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -204,13 +199,28 @@
 										</ul>
 									</div>
 								</div>
+								<h5 class="subheader">Prototyping and designing an e-bill payment and top-up solution for Vodafone SmartStore to get executive buy-in.</h5>
+								<h5>My roles:</h5>
+								<ul>
+									<li><span>Redesign previously available capabilities for tablet based kiosk.</span></li>
+									<li><span>Create a tapable prototype to convince the director of consumer business unit.</span></li>
+									<li><span>Finalize the design and create documentation for developers.</span></li>
+								</ul>					
 							</div>
 						</div>
 					</article>
 					<article class="last">
 						<div class="row" id="stylebolt">
-							<div class="five columns">
+							<div class="twelve columns">
 								<h4>Stylebolt</h4>
+								<div class="flex-container">
+									<div class="flexslider">
+										<ul class="slides" >
+											<li><img src="media/stylebolt-1.jpg"></li>
+											<li><img src="media/stylebolt-2.jpg"></li>
+										</ul>
+									</div>
+								</div>
 								<h5 class="subheader">We have reached almost 100 000 euros online only revenue in only 7 month after the launch of redesigned webshop from nearly 0 online only revenue.</h5>
 								<h5>My roles:</h5>
 								<ul>
@@ -220,16 +230,6 @@
 									<li><span>Upload products, design product pages.</span></li>
 									<li class="hide-for-small"><a href="http://stylebolt.hu/">Open the website</a></li>
 								</ul>					
-							</div>
-							<div class="seven columns">
-								<div class="flex-container">
-									<div class="flexslider">
-										<ul class="slides" >
-											<li><img src="media/stylebolt-1.jpg"></li>
-											<li><img src="media/stylebolt-2.jpg"></li>
-										</ul>
-									</div>
-								</div>
 							</div>
 						</div>
 					</article>
