update portfolio pictures to full width

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
-											<li><img src="media/m-vf-prototype.gif"></li>
-											<li><img src="media/m-vf-prototype-2.png"></li>
-											<li><img src="media/m-vf-user-test.jpg"></li>
+											<li><img src="media/vodafone-mobile-1.png"></li>
+											<li><img src="media/vodafone-mobile-2.png"></li>
+											<li><img src="media/vodafone-mobile-3.jpg"></li>
 										</ul>
 									</div>
 								</div>
@@ -152,7 +152,7 @@
 						<div class="row">
 							<div class="twelve columns">
 								<h4>Usability testing of vodafone.hu</h4>
-								<img class="bordered-img" src="media/vf-user-test.jpg">
+								<img class="bordered-img" src="media/vodafone-desktop-usability.jpg">
 								<h5 class="subheader">I have created user task for the test based on stakeholder interviews and moderated the test using Silverback App.</h5>
 								<h5>Objectives were:</h5>
 								<ul>
@@ -170,9 +170,9 @@
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
-											<li><img src="media/vf-tour-sketch.jpg"></li>
-											<li><img src="media/vf-tour-heavy.jpg"></li>
-											<li><img src="media/vf-tour-final.jpg"></li>											
+											<li><img src="media/vodafone-online-tour-1.jpg"></li>
+											<li><img src="media/vodafone-online-tour-2.png"></li>
+											<li><img src="media/vodafone-online-tour-3.png"></li>											
 										</ul>
 									</div>
 								</div>
@@ -194,8 +194,8 @@
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
-											<li><img src="media/vf-kiosk-1.jpg"></li>
-											<li><img src="media/vf-kiosk-2.jpg"></li>
+											<li><img src="media/vodafone-kiosk-1.jpg"></li>
+											<li><img src="media/vodafone-kiosk-2.jpg"></li>
 										</ul>
 									</div>
 								</div>
@@ -216,8 +216,8 @@
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
-											<li><img src="media/stylebolt-1.jpg"></li>
-											<li><img src="media/stylebolt-2.jpg"></li>
+											<li><img src="media/stylebolt-full-width-1.jpg"></li>
+											<li><img src="media/stylebolt-full-width-2.jpg"></li>
 										</ul>
 									</div>
 								</div>
