change copy for Stylebolt

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 										</ul>
 									</div>
 								</div>
-								<h5 class="subheader">We have reached almost 100 000 euros online only revenue in only 7 month after the launch of redesigned webshop from nearly 0 online only revenue.</h5>
+								<h5 class="subheader">We have reached 100 000 euros online only revenue in 7 month after the launch of redesigned webshop from nearly 0 online only revenue.</h5>
 								<h5>My roles:</h5>
 								<ul>
 									<li><span>Design the information architecture and user interface of the webshop (wireframing).</span></li>
