--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<article>
 						<div class="row">
 							<div class="columns twelve">
-								<h4>Design & build the online presence of KMM London.</h4>
+								<h4 class="item-title">Design & build the online presence of KMM London.</h4>
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -120,10 +120,10 @@
 							</div>
 						</div>
 					</article>
-					<article>
+					<article class="vodafone-mobile">
 						<div class="row">
 							<div class="twelve columns">
-								<h4>Wireframing, prototyping and usability testing of Mobile Vodafone</h4>
+								<h4 class="item-title">Wireframing, prototyping and usability testing of Mobile Vodafone</h4>
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -148,10 +148,10 @@
 							</div>
 						</div>
 					</article>
-					<article>
+					<article class="vodafone-desktop-usability">
 						<div class="row">
 							<div class="twelve columns">
-								<h4>Usability testing of vodafone.hu</h4>
+								<h4 class="item-title">Usability testing of vodafone.hu</h4>
 								<img class="bordered-img" src="media/vodafone-desktop-usability.jpg">
 								<h5 class="subheader">I have created user task for the test based on stakeholder interviews and moderated the test using Silverback App.</h5>
 								<h5>Objectives were:</h5>
@@ -166,7 +166,7 @@
 					<article>
 						<div class="row">
 							<div class="twelve columns">
-								<h4>Vodafone Online tour</h4>
+								<h4 class="item-title">Vodafone Online tour</h4>
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -190,7 +190,7 @@
 					<article>
 						<div class="row">
 							<div class="twelve columns">
-								<h4>e-Bill payment and top-up kiosk.</h4>
+								<h4 class="item-title">e-Bill payment and top-up kiosk.</h4>
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -212,7 +212,7 @@
 					<article class="last">
 						<div class="row" id="stylebolt">
 							<div class="twelve columns">
-								<h4>Stylebolt</h4>
+								<h4 class="item-title">Stylebolt</h4>
 								<div class="flex-container">
 									<div class="flexslider">
 										<ul class="slides" >
@@ -236,7 +236,7 @@
 					<!-- <article class="last">
 						<div class="row">
 							<div class="five columns push-seven">
-								<h4>Webpage for a Gasthouse in Austria</h4>
+								<h4 class="item-title">Webpage for a Gasthouse in Austria</h4>
 								<h5 class="subheader">A quick work for an opening Gasthause in the beggining of the season to provide basic information and to generate leads.</h5>
 								<h5>Freelance job:</h5>
 								<ul>
