add / change links to live websites of portfolio items

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 											<li><span>Discover business & user needs and possible solutions</span></li>
 											<li><span>Branding and visual design</span></li>
 											<li><span>Iterative prototyping & website building</span></li>
-											<li><a href="http://katalinmerksz.com">Open the website</a></li>
 										</ul>
 									</div>
 									<div class="columns six">
@@ -117,6 +116,7 @@
 										</ul>
 									</div>
 								</div>
+								<p><a href="http://katalinmerksz.com">Open KMM London's website</a></p>
 							</div>
 						</div>
 					</article>
@@ -144,7 +144,8 @@
 									<li><span>Used TAP and Adobe Fireworks to make the prototype and refine wireframes.</span></li>
 									<li><span>Created user tasks for the test based on research reports from Vodafone Group.</span></li>
 									<li><span>Moderated the user tests and refined the prototype based on finding of the test.</span></li>
-								</ul>					
+								</ul>
+								<p>Check the application in the <a href="https://itunes.apple.com/hu/app/mobil-vodafone/id524375603">App Store</a> or <a href="https://play.google.com/store/apps/details?id=hu.mito.android.vodafone">Google Play</a></p>					
 							</div>
 						</div>
 					</article>
@@ -182,8 +183,8 @@
 									<li><span>Sketching, wireframing of the initial idea.</span></li>
 									<li><span>Iterative design with in-house and agency ux designers.</span></li>
 									<li><span>Coordinating the implementation.</span></li>
-									<li class="hide-for-small"><a href="http://vodafone.hu/online-ugyintezes/osszes-szolgaltatas">Open the website</a></li>
-								</ul>					
+								</ul>
+								<p><a href="http://vodafone.hu/online-ugyintezes/osszes-szolgaltatas">Open the tour</a></p>
 							</div>
 						</div>
 					</article>
@@ -228,8 +229,8 @@
 									<li><span>Front end development based on wireframes and visual design.</span></li>
 									<li><span>Magento (open source shopping cart) customization.</span></li>
 									<li><span>Upload products, design product pages.</span></li>
-									<li class="hide-for-small"><a href="http://stylebolt.hu/">Open the website</a></li>
 								</ul>					
+								<p><a href="http://stylebolt.hu/">Open Stylebolt's website</a></p>
 							</div>
 						</div>
 					</article>
