tune back the bullshit level of the tagline

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<header class="container">
 		<div class="row">
 			<div class="twelve columns">
-				<h1>I help you to <em>design and build</em> awesome digital products.</h1>
-				<h2>And then make them even more awesome.</h2>
+				<h1>I help you to <em>design and build</em> digital products.</h1>
+				<h2>And then make them even better.</h2>
 			</div>
 		</div>
 	</header>
